# openclaw-embeddings-service

./: .coverage_baseline  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  pyproject.toml  server.py
.github/workflows/: ci.yml
docs/: BRANCH_PROTECTION.md
spec/: SUPPLY_CHAIN.md
tests/: test_server.py
